--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Website Questionaire</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,800&display=swap" rel="stylesheet">
+</head>
+<body style="background-color:grey;">
+	<h1>Lets Make Music!</h1>
+	<h2>Explore Patatap:</h2>
+		<p>
+		Click on the images below to access the patatap website and fill out the survey about your experience!
+		</p>
+	<div class="images">
+	<a href="https://www.patatap.com/">
+		<img src="p1.png">
+		<img src ="p2.gif"> 
+		<img src ="p3.jpg"> 
+		<img src ="p4.jpg">
+		<img src ="p5.png"> 
+		<img src ="p6.png"> 
+	</a>	
+		
+		
+
+	</div>
+
+
+
+	</br>
+	</br>
+
+	<div>
+		<form action="" name="Website Questionaire" method="POST">
+		
+		
+		<div class="Questions">
+		<h1>Questions</h1>
+		<h3>What is your first name?</h3>
+		<input type="text" name="firstname">
+		<h3>What is your last name?</h3>
+		<input type="text" name="lastname">
+		<h3>Are you</h3>
+		<input type="radio" name="sex" value="male">male<br>
+		<input type="radio" name="sex" value="female">Female<br>
+		<h3>I Like</h3>
+		<input type="checkbox" name="Apples" value="Apples">Apples <br>
+		<input type="checkbox" name="Oranges" value="Oranges">Oranges <br>
+		<input type="checkbox" name="Bananas" value="Bananas">Bananas <br>
+		<input type="checkbox" name="Grapes" value="Grapes">Grapes <br>
+
+		<h3>What is your favourite fruit?</h3>
+		<select name="favourite">
+			<option value="Apples" selected="selected">Apples</option>
+			<option value="Oranges">Oranges</option>
+			<option value="Bananas">Bananas</option>
+		</select>
+
+		<h3>Comments:</h3>
+		<textarea rows="5" cols="30"></textarea>
+		</div>
+
+
+		<input type="submit" value="Submit the Questionaire">
+	</form>
+	</div>
+	
+
+</body>
+</html>
