--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,800&display=swap" rel="stylesheet">
 </head>
-<body style="background-color:grey;">
+<body style="background-color:white;">
 	<h1>Lets Make Music!</h1>
 	<h2>Explore Patatap:</h2>
 		<p>
-		Click on the images below to access the patatap website and fill out the survey about your experience!
+		Click on the images below to access the Patatap website and fill out the survey about your experience!
 		</p>
 	<div class="images">
 	<a href="https://www.patatap.com/">
@@ -31,39 +31,75 @@
 	</br>
 
 	<div>
+
 		<form action="" name="Website Questionaire" method="POST">
 		
 		
 		<div class="Questions">
+
 		<h1>Questions</h1>
+
 		<h3>What is your first name?</h3>
 		<input type="text" name="firstname">
+
 		<h3>What is your last name?</h3>
 		<input type="text" name="lastname">
-		<h3>Are you</h3>
-		<input type="radio" name="sex" value="male">male<br>
-		<input type="radio" name="sex" value="female">Female<br>
-		<h3>I Like</h3>
-		<input type="checkbox" name="Apples" value="Apples">Apples <br>
-		<input type="checkbox" name="Oranges" value="Oranges">Oranges <br>
-		<input type="checkbox" name="Bananas" value="Bananas">Bananas <br>
-		<input type="checkbox" name="Grapes" value="Grapes">Grapes <br>
 
-		<h3>What is your favourite fruit?</h3>
+		<h3>Would you recommend this website to a friend?</h3>
+		<input type="radio" name="recommend" value="yes"><label>Yes</label><br>
+		<input type="radio" name="recommend" value="no"><label>No</label><br>
+
+		<h3>What were you able to do on the site? Check all that apply</h3>
+		<input type="checkbox" name="music" value="music"><label>I was able to hear music</label> <br>
+		<input type="checkbox" name="animations" value="animations"><label>I was able to see animations</label> <br>
+		<input type="checkbox" name="key" value="key"><label>Each key I pressed produced a unique sound and animation</label> <br>
+		<input type="checkbox" name="multi" value="multi"><label>I could press multiple keys at once</label> <br>
+		<input type="checkbox" name="Other" value="other"><label>Other</label> <br>
+
+		<h3>If you selected "other" please specify other functionality you were able to do:</h3>
+		<textarea rows="5" cols="30"></textarea>
+
+		<h3>What was your favourite feature?</h3>
 		<select name="favourite">
-			<option value="Apples" selected="selected">Apples</option>
-			<option value="Oranges">Oranges</option>
-			<option value="Bananas">Bananas</option>
+			<option value="Sounds" selected="Sounds">Sounds</option>
+			<option value="Animation">Animation</option>
+			<option value="Colours">Colours</option>
 		</select>
 
-		<h3>Comments:</h3>
+		<h3>If there is a feature that you would change, what would it be?</h3>
+		<input type="text" name="feature">
+		<h3>I found Patatap easy to use</h3>
+		
+		<label>Strongly Disagree</label><input type="range" list="tickmarks" min="0" max="9" style="color: black;"><label>Strongly Agree</label>
+		<datalist id="tickmarks">
+			<option value="0" label="0"></option>
+			<option value="1" label="1"></option>
+			<option value="2" label="2"></option>
+			<option value="3" label="3"></option>
+			<option value="4" label="4"></option>
+			<option value="5" label="5"></option>
+			<option value="6" label="6"></option>
+			<option value="7" label="7"></option>
+			<option value="8" label="8"></option>
+			<option value="9" label="9"></option>
+			<option value="6" label="10"></option>
+
+		</datalist>
+
+		<h3>Do you have any additional comments?</h3>
 		<textarea rows="5" cols="30"></textarea>
+
+		
 		</div>
 
 
 		<input type="submit" value="Submit the Questionaire">
 	</form>
 	</div>
+
+	<footer>
+  <p class="signature"> Website designed by: Skyla Thadani </p><br>
+</footer>
 	
 
 </body>
