--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -29,6 +29,7 @@
     <option value="GlutOrg">GlutenFree and Organic</option>
     <option value="VegGluten">Vegetarian and GlutenFree</option>
     <option value="VegGlutOrg">Vegetarian, GlutenFree and Organic</option>
+    <option value="Organic">Organic</option>
     <option value="None">None</option>
 	</select>
 </div>
