updated lab3 to fix if statement issue

--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -49,7 +49,7 @@
 <button class="accordion">Cart</button>
 <div id="Cart" class="tabcontent">
   <h3>Cart</h3>
-  <p>View the contents of your cart:.</p>
+  <p>View the contents of your cart:</p>
   <div id="displayCart"></div>
 </div>
 
