--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -16,7 +16,7 @@
   <button class="tablinks" onclick="openInfo(event, 'Cart')">Cart</button>
 </div> -->
 
-<button class="accordion">Client</button>
+<button class="accordion"> Step 1: Client Information </button>
 <div id="Client" class="tabcontent">
   <h3>Client Information</h3>
   <p>Tell us a bit about you.</p>
@@ -28,25 +28,27 @@
   <label for="Organic">I prefer to buy organic</label>
 </div>
 
-<button class="accordion">Products</button>
+<button class="accordion">Step 2: Choose Your Products </button>
 <div id="Products" class="tabcontent">
   <h3>Your targeted products</h3>
   <p>We preselected products based on your preferences.</p>
-   Choose items to buy: 
+  <p>Choose items to buy: </p>
+   
    <div class="btn-group">
-  <button id="veg" type="button" class="block" onclick="populateVeggies('dietSelect', 'displayProduct')">Fruits and Veggies</button>
-  <button id="grains" type="button" class="block" onclick="populateGrains('dietSelect', 'displayProduct')">Grains</button>
-  <button id="dairy" type="button" class="block" onclick="populateDairy('dietSelect', 'displayProduct')">Dairy</button>
-  <button id="meat" type="button" class="block" onclick="populateMeat('dietSelect', 'displayProduct')">Meat</button>
+  <button id="veg" type="button" class="block" onclick="populateVeggies('dietSelect', 'displayProduct')">Produce </button>
+  <button id="grains" type="button" class="block" onclick="populateGrains('dietSelect', 'displayProduct')">Grains </button>
+  <button id="dairy" type="button" class="block" onclick="populateDairy('dietSelect', 'displayProduct')">Dairy </button>
+  <button id="meat" type="button" class="block" onclick="populateMeat('dietSelect', 'displayProduct')">Meat </button>
 </div>
 
+<br></br>
    <div id="displayProduct"></div>
    <button id="addCart" type="button" class="block" onclick="selectedItems()">
     Add selected items to cart.
   </button>
 </div>
 
-<button class="accordion">Cart</button>
+<button class="accordion">Step 3: Check Out and View Shopping Cart</button>
 <div id="Cart" class="tabcontent">
   <h3>Cart</h3>
   <p>View the contents of your cart:</p>
