--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -32,7 +32,7 @@
 <div id="Products" class="tabcontent">
   <h3>Your targeted products</h3>
   <p>We preselected products based on your preferences.</p>
-  <p>Choose items to buy: </p>
+  <p>Please add the items to your cart before moving on to the next category: </p>
    
    <div class="btn-group">
   <button id="veg" type="button" class="block" onclick="populateVeggies('dietSelect', 'displayProduct')">Produce </button>
