--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -19,7 +19,9 @@
 <button class="accordion"> Step 1: Client Information </button>
 <div id="Client" class="tabcontent">
   <h3>Client Information</h3>
-  <p>Tell us a bit about you.</p>
+  <p>Tell us a bit about you.
+     Please check any applicable categories:
+  </p>
   <input type="checkbox" name="preference" value="Vegetarian">
   <label for="Vegetarian">I am vegetarian</label>
   <input type="checkbox" name="preference" value="gluten">
