--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -15,7 +15,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div class="jumbotron jumbotron-fluid">
+	<div class="jumbotron container p-3" >
   <div class="container">
     <h1 class="display-4"><img src="hair-salon.png">Nice Scissors</h1>
 
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide container p-3" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
