--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -204,7 +204,7 @@
                     <!-- collapsible part -->
                     <a href="#profile" class="btn btn-primary" data-toggle="collapse">See Profile</a>
                     <div id="profile" class="collapse p-3">
-                        <p>Jules has been cutting hair for 4 years and is our in-house hair treatment mixer </p>
+                        <p>Lily has been cutting hair for 4 years and is our in-house hair treatment mixer </p>
                     </div>
                 </div>
             </div>
